--- a/css/style_fpw_VERIFY.css
+++ b/css/style_fpw_VERIFY.css
@@ -68,32 +68,13 @@ body{
     transform: translateY(-50%);
     font-size: 20px;
 }
-
-.wrapper .remember-forgot{
-    display: flex;
-    justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px ;
-}
-
-.remember-forgot label input{
-    accent-color: black;
-    margin-right: 3px;
-}
-
-.remember-forgot a{
-    color: black;
-    text-decoration: none;
-}
-
-.remember-forgot a:hover{
-    text-decoration: underline;
-}
-
-
-
 .wrapper .btn{
-    width: 100%;
+    display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 20px;
+	margin: 20px auto;
+    width: 30%;
     height: 45px;
     background: white;
     border:  none;
@@ -105,6 +86,7 @@ body{
     font-size: 16px;
 }
 .btn p{
+
     color: black;
     text-decoration: none;
     font-weight: 600;
