--- a/css/style_homepage_phuc.css
+++ b/css/style_homepage_phuc.css
@@ -1,18 +1,41 @@
+
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: url("../images/background_home.jpeg") no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+
+
+
 /* Styles for the header */
+
+
+
+
+
 .header {
     display: flex;
+    background-color: transparent;
     justify-content: space-between;
     height: 20vh;
     align-items: center;
     padding: 10px 20px;
-    background-color: #f8f8f8;
-    border-bottom: 1px solid #e7e7e7;
+    
+    
     position: fixed; /* Makes the header stay at the top */
     width: 100%;
     box-sizing: border-box; /* Ensures padding does not affect the total width */
     top: 0;
     left: 0;
 }
+
+
 
 .logo {
     display: flex;
