--- a/css/style_homepage.css
+++ b/css/style_homepage.css
@@ -31,13 +31,14 @@ body{
     align-items: center;
     padding: 0 20px; /* Add padding to the sides */
     background-color: transparent;
-    border-bottom: 1px solid #852525;
+    /* border-bottom: 1px solid #852525; */
 }
 
 .mainbody {
     display: flex;
     flex: 1;
     background-color: transparent;
+    flex-direction: row;
 }
 
 
@@ -82,18 +83,33 @@ body{
 .vertical-list {
     list-style-type: none; /* Remove default list styles */
     padding: 0; /* Remove default padding */
-    width: 20%;
-    background-color: aqua;
+    width: 15%;
+    /* background-color: aqua; */
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    grid-template-columns: 1fr;
 }
 
 .list-item {
-    background-color: #f0f0f0; /* Background color of each list item */
-    padding: 10px; /* Padding around the clickable area */
+    left: 40;
+    text-align: center;
+    /*background-color: #f0f0f0; Background color of each list item */
+    padding: 20px; /* Padding around the clickable area */
     margin-bottom: 5px; /* Spacing between list items */
     border-radius: 5px; /* Rounded corners for the clickable box */
     cursor: pointer; /* Change cursor to pointer on hover to indicate clickability */
+    flex: 1;
 }
 
 .list-item:hover {
-    background-color: #e0e0e0; /* Change background color on hover for visual feedback */
+    background-color: #b6cbee; /* Change background color on hover for visual feedback */
+}
+
+.panel {
+    background-color: #ffffff;
+    flex : 1;
+    border-radius: 30px;
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
